--- a/react-vite/src/components/UserPage/UserPhotos.css
+++ b/react-vite/src/components/UserPage/UserPhotos.css
@@ -1,6 +1,6 @@
 #photos-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(min(100%, 200px), 1fr));
+    grid-template-columns: 1fr 1fr;
     gap: 1em;
     justify-items: center;
 }
@@ -30,7 +30,7 @@
     justify-content: space-between;
     text-overflow: ellipsis;
     white-space: nowrap;
-    overflow: hidden; 
+    overflow: hidden;
 }
 
 .trash {
