--- a/react-vite/src/components/UserPage/UserPage.css
+++ b/react-vite/src/components/UserPage/UserPage.css
@@ -1,9 +1,11 @@
 #full-user-page {
     display: flex;
     flex-direction: row;
-    width: fit-content;
-    margin: 30px;
-    padding-top: 20px;
+    column-gap: 20px;
+    /* width: fit-content; */
+    max-width: 1125px;
+    margin: auto;
+    padding-top: 30px;
 }
 
 
@@ -108,11 +110,15 @@ img.pfp {
 /* end of user side bar css for positioning, start of styling for specific pages */
 
 
-.sub-pages {
+/* .sub-pages {
     flex: 2;
     display: flex;
     flex-direction: column;
     margin: 3% 0% 0% 5%;
+} */
+
+#user-overview-contaner {
+    width: auto;
 }
 
 #user-overview-container:hover {
