--- a/react-vite/src/components/UserPage/UserPage.css
+++ b/react-vite/src/components/UserPage/UserPage.css
@@ -31,6 +31,7 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
+    margin-top: 5px;
 
 }
 
@@ -45,13 +46,6 @@
     /* flex-direction: row; */
 }
 
-.user-navigation-container {
-    display: flex;
-    flex-direction: column;
-
-    margin: 20px;
-    width: 140px;
-}
 
 .single-user-navigation {
     display: inline-block;
@@ -71,14 +65,23 @@
     border-bottom: none;
 }
 
+.user-navigation-container {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    /* margin: 20px;
+    width: 140px; */
+}
+
 .nav-description:hover {
     background-color: #c3cddf;
+    padding: 10px;
     border-radius: 5px;
     cursor: pointer;
 }
 
 .nav-description {
-    padding: 10px 5px;
+    padding: 10px;
     width: 140px;
 }
 
@@ -96,6 +99,8 @@ h5 {
 
 h4.nav-description {
     margin: 0;
+    font-weight: 500 !important;
+    color: #1f2f44 !important;
 }
 
 img.pfp {
@@ -123,4 +128,5 @@ img.pfp {
 
 #user-overview-container:hover {
     cursor: default;
+
 }
