--- a/react-vite/src/components/Navigation/Navigation.css
+++ b/react-vite/src/components/Navigation/Navigation.css
@@ -93,15 +93,27 @@
   margin-top: 5px;
 }
 
+.dropdown {
+  display: grid;
+  justify-self: end;
+  position: relative;
+}
+
+.manBizDropdown {
+  display: grid;
+  justify-self: end;
+  position: relative;
+}
+
+
 .profile-dropdown {
   position: absolute;
   padding: 20px;
-  width: fit-content;
+  width: 125px;
   background-color: #FFFBF6;
   right: 0;
   left: inherit;
-  margin-top: 5px;
-  margin-right: 50px;
+  margin-top: 1px;
   border-radius: 5px;
   z-index: 2;
 }
@@ -132,13 +144,16 @@
 }
 
 .forbiz-dropdown {
+
   position: absolute;
-  z-index: 2;
-  padding: 18px;
+  padding: 20px;
+  width: 175px;
   background-color: #FFFBF6;
-  margin-top: 200px;
+  right: 0;
+  left: inherit;
+  margin-top: 26.5px;
   border-radius: 5px;
-  margin-right: -50px;
+  z-index: 2;
 
 }
 
