--- a/react-vite/src/components/UserPage/Overview.css
+++ b/react-vite/src/components/UserPage/Overview.css
@@ -1,9 +1,10 @@
 /* styling for overview */
 .needs-border {
-  padding: 1em;
+  /* padding: 1em; */
   background-color: #FFFBF6;
   border-radius: 5px;
   border: #c3cddf solid 1px;
+  padding: 10px 20px 30px 20px;
 }
 
 #user-details {
