--- a/react-vite/src/components/AllPhotosModal/AllPhotos.css
+++ b/react-vite/src/components/AllPhotosModal/AllPhotos.css
@@ -1,12 +1,20 @@
-.modal {
+.allPhotosModal {
     max-height: calc(100vh - 100px) !important;
     /* margin-top: 10px;
     margin-left: 30px;
     margin-right: 30px;
     padding-bottom: 30px; */
-    width: 75vw !important;
+    width: 75vw;
+    /* width: fit-content; */
+    /* max-width: 1200px; */
+    /* width: auto !important;
+    max-width: 90%; */
     overflow-y: auto !important;
 }
+
+/* .modal-content {
+    max-width: calc(100vh - 100px);
+} */
 
 .allPhotosHeader {
     display: flex;
@@ -19,6 +27,7 @@
     padding-bottom: 10px;
     background-color: #fff2eb;
     z-index: 1;
+    gap: 20px;
 }
 
 .allPhotosHeader button {
@@ -33,11 +42,20 @@
 
 .allPhotosContainerModal {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(min(100%, 300px), 1fr));
+    /* grid-template-columns: repeat(auto-fit, minmax(min(100%, 300px), 1fr)); */
+    grid-template-columns: repeat(auto-fill, minmax(min(300px, 100%), 1fr));
+    /* grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); */
     gap: 15px;
     justify-items: center;
-    /* overflow-y: auto !important; */
-    /* max-height: calc(100vh - 100px) !important; */
+    overflow-y: auto !important;
+    max-height: calc(100vh - 100px) !important;
+    /* display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+    flex-direction: column; */
+    /* display: grid;
+    grid-template-columns: repeat(4, minmax(0, 1fr));
+    gap: 20px; */
 }
 
 .allPhotosWrapper {
@@ -46,8 +64,8 @@
 }
 
 .images {
-    object-fit: cover;
-    object-position: center;
+    /* object-fit: cover;
+    object-position: center; */
     border-radius: 3px;
     width: 100%;
     height: 100%;
