--- a/react-vite/src/components/SingleBusinessPage/SingleBusiness.css
+++ b/react-vite/src/components/SingleBusinessPage/SingleBusiness.css
@@ -159,10 +159,17 @@
     margin-bottom: 30px;
 }
 
-.locationHours {
+.locationHoursSection {
     display: flex;
+    flex-wrap: wrap;
+    flex-direction: row;
     gap: 30px;
 }
+
+.locationHours {
+    display: grid;
+}
+
 
 .hours {
     display: grid;
@@ -285,8 +292,21 @@
 
 .review-text {
     max-inline-size: 690px;
-    word-wrap: break-word; /* Break long words when necessary */
-    overflow-wrap: break-word; /* Break words when necessary */
-    white-space: pre-wrap; /* Preserve white space */
+    word-wrap: break-word;
+    /* Break long words when necessary */
+    overflow-wrap: break-word;
+    /* Break words when necessary */
+    white-space: pre-wrap;
+    /* Preserve white space */
 
+}
+
+.App {
+    height: 100vh;
+    width: 100vw;
+}
+
+.map-container {
+    height: 100%;
+    width: 100%;
 }
