--- a/react-vite/src/components/Footer/Footer.css
+++ b/react-vite/src/components/Footer/Footer.css
@@ -37,16 +37,23 @@
 
 }
 
-.techs {
-  display: flex;
-  justify-content: space-around;
 
-  padding-top: 10px;
+.backend {
+  display: grid;
+  grid-template-columns: repeat(2, minmax(0, 1fr));
+  align-items: center;
+  justify-items: center;
+}
+
+.frontend {
+  display: grid;
+  grid-template-columns: repeat(3, minmax(0, 1fr));
+  align-items: center;
+  justify-items: center;
 }
 
 .docs {
   padding-top: 7px;
-
   display: flex;
   flex-direction: column;
 }
