--- a/react-vite/src/components/Footer/Footer.css
+++ b/react-vite/src/components/Footer/Footer.css
@@ -18,15 +18,17 @@
   gap: 10px;
   margin: auto;
   width: 100vw; /* Full viewport width */
-  border-top: 1px solid #d8c3c3;
+  border-top: 1px solid #c3cddf;
   justify-items: center;
-
+  padding-top: 10px;
 }
 
 .dev-heading {
   display: flex;
   flex-direction: column;
   font-size: 16px;
+  align-items: center;
+  font-weight: 500;
 }
 
 .devs {
@@ -40,20 +42,25 @@
 
 .backend {
   display: grid;
-  grid-template-columns: repeat(2, minmax(0, 1fr));
+  grid-template-columns: repeat(4, minmax(0, 1fr));
   align-items: center;
   justify-items: center;
 }
 
-.frontend {
-  display: grid;
-  grid-template-columns: repeat(3, minmax(0, 1fr));
-  align-items: center;
-  justify-items: center;
+.names {
+  font-weight: 300;
 }
 
 .docs {
   padding-top: 7px;
   display: flex;
   flex-direction: column;
+}
+
+.postgres {
+  font-size: 20px;
+}
+
+.docs-links {
+  font-weight: 300;
 }
