--- a/react-vite/src/components/SingleBusinessPage/SingleBusiness.css
+++ b/react-vite/src/components/SingleBusinessPage/SingleBusiness.css
@@ -170,6 +170,10 @@
     width: 400px;
 }
 
+.businessAddress {
+    margin-top: 5px;
+}
+
 .businessDetailsLocation {
     display: flex;
     justify-content: space-between;
