--- a/react-vite/src/components/Navigation/Navigation.css
+++ b/react-vite/src/components/Navigation/Navigation.css
@@ -171,9 +171,7 @@
     grid-template-areas:
       "logo profile"
       "search search";
-    column-gap: 0px;
-    row-gap: 5px;
-    padding: 5vw;
+    padding: 5vw 2vw 8vw 2vw;
   }
 
   .logo {
