--- a/react-vite/src/components/Navigation/Navigation.css
+++ b/react-vite/src/components/Navigation/Navigation.css
@@ -6,7 +6,7 @@
   align-items: center;
   background-color: #ffbe6e;
   margin: 0px;
-  width: 100vw;
+  /* width: 100vw; */
   padding-top: 15px;
   padding-bottom: 15px;
 }
