mobile1 no results

--- a/react-vite/src/components/SearchFormPage/SearchForm.css
+++ b/react-vite/src/components/SearchFormPage/SearchForm.css
@@ -232,4 +232,13 @@ select {
     border-radius: 5px;
     z-index: 1;
   }
+
+  .noBiz {
+    margin: auto;
+    width: 90vw;
+  }
+
+  .noBiz img {
+    width: 90vw;
+  }
 }
