--- a/react-vite/src/components/UserPage/UserPage.css
+++ b/react-vite/src/components/UserPage/UserPage.css
@@ -131,3 +131,45 @@ img.pfp {
     cursor: default;
 
 }
+
+@media screen and (max-width: 480px) {
+    #full-user-page {
+        display: grid;
+        padding-left: 15px;
+        padding-right: 15px;
+    }
+
+    .user-summary-container {
+        width: 100%;
+        padding: 0;
+    }
+
+    .sub-pages {
+        width: 75vw;
+    }
+
+    .user-navigation-container {
+        width: fit-content;
+        margin: auto;
+    }
+
+    .user-mobile {
+        display: flex;
+        align-self: center;
+        gap: 20px;
+        padding-top: 20px;
+        width: fit-content;
+    }
+
+    .user-mobile-item {
+        display: grid;
+        justify-content: center;
+        justify-items: center;
+        width: 75px;
+        row-gap: 10px;
+    }
+
+    .user-mobile-item>div>i {
+        font-size: xx-large;
+    }
+}
