--- a/react-vite/src/components/UserPage/UserPhotos.css
+++ b/react-vite/src/components/UserPage/UserPhotos.css
@@ -45,3 +45,9 @@
 .trash:hover {
     cursor: pointer;
 }
+
+@media screen and (max-width: 480px) {
+    #photos-container {
+        grid-template-columns: 1fr
+    }
+}
