--- a/react-vite/src/components/AllPhotosModal/AllPhotos.css
+++ b/react-vite/src/components/AllPhotosModal/AllPhotos.css
@@ -114,7 +114,8 @@
     }
 
     .allPhotosContainerModal {
-        width: 65vw;
+        width: 75vw;
+        max-height: 65vh;
         margin: auto;
     }
 }
