--- a/react-vite/src/components/AllPhotosModal/AllPhotos.css
+++ b/react-vite/src/components/AllPhotosModal/AllPhotos.css
@@ -110,11 +110,18 @@
 
 @media screen and (max-width: 480px) {
     .allPhotosModal {
+        width: 60vw;
         height: 65vh;
     }
 
+    .allPhotosHeader {
+        display: grid;
+        gap: 0px;
+        padding-bottom: 20px;
+    }
+
     .allPhotosContainerModal {
-        width: 75vw;
+        width: 60vw;
         max-height: 65vh;
         margin: auto;
     }
