--- a/react-vite/src/components/ManageBusinessesPage/ManageBusiness.css
+++ b/react-vite/src/components/ManageBusinessesPage/ManageBusiness.css
@@ -170,3 +170,72 @@
   }
 
 }
+
+@media screen and (min-width: 481px) and (max-width: 768px) {
+
+  .manBizCards {
+    margin: auto;
+    width: 75vw;
+    flex-direction: column;
+  }
+
+  .businessesImageWrapper {
+    width: auto;
+    height: 200px;
+  }
+
+  .businessesImage {
+    width: 100%;
+    height: 200px;
+  }
+
+  .businessDeets {
+    width: 90%;
+    margin-left: 5vw;
+    padding-top: 0;
+    padding-bottom: 15px;
+  }
+
+  .businessDeets h2,
+  .priceSubcat,
+  .searchStars,
+  .todayHours {
+    width: fit-content;
+    margin-top: 0px;
+  }
+
+  .recent-review-text {
+    inline-size: 60vw;
+  }
+
+  .card {
+    padding-bottom: 20px;
+  }
+
+  .bizandbutton {
+    padding-bottom: 20px;
+  }
+
+  .manBizPage {
+    width: 90vw;
+  }
+
+  .manbutton {
+    margin: 0 10px;
+  }
+
+  .manage-dropdown {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    margin-top: 5px;
+    right: 0;
+    height: fit-content;
+    margin-right: 50px;
+  }
+
+  .deleteModal {
+    width: 65vw;
+  }
+
+}
