--- a/react-vite/src/components/SearchFormPage/SearchForm.css
+++ b/react-vite/src/components/SearchFormPage/SearchForm.css
@@ -261,3 +261,82 @@ select {
     padding-bottom: 20px;
   }
 }
+
+@media screen and (min-width: 481px) and (max-width: 768px) {
+  .businessCards {
+    margin: auto;
+    width: 90vw;
+    flex-direction: column;
+  }
+
+  .businessesImageWrapper {
+    width: auto;
+    height: 300px;
+    padding: 20px;
+  }
+
+  .businessesImage {
+    width: 100%;
+    height: 300px;
+  }
+
+  .businessDeets {
+    width: 90%;
+    margin-left: 5vw;
+    padding-top: 0;
+    padding-bottom: 15px;
+  }
+
+  .businessDeets h2,
+  .priceSubcat,
+  .searchStars,
+  .todayHours {
+    width: fit-content;
+    margin-top: 0px;
+  }
+
+  .recent-review-text {
+    inline-size: 80vw;
+  }
+
+  .searchPage h1 {
+    margin-left: 5vw;
+  }
+
+  .filterButtonWrapper {
+    margin-left: 4vw;
+    padding-bottom: 20px;
+  }
+
+  .filterButton {
+    border-radius: 3px;
+    padding: 12px 16px 12px 16px;
+    font-size: 16px;
+    font-weight: 600;
+    border: #c3cddf 1px solid;
+    background-color: transparent;
+    color: #1f2f44;
+  }
+
+  .outerFilterWrapper .filterComponent {
+    margin-top: 5px;
+    background-color: #FFFBF6;
+    padding: 15px;
+    width: 80vw;
+    border-radius: 5px;
+    z-index: 1;
+  }
+
+  .noBiz {
+    margin: auto;
+    width: 90vw;
+  }
+
+  .noBiz img {
+    width: 90vw;
+  }
+
+  .card {
+    padding-bottom: 20px;
+  }
+}
